just forked, switched to community supported BATS repo, verified log2 tests passed

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,10 +3,13 @@
 	url = https://github.com/sstephenson/bats
 [submodule "tests/vendor/bats-assert"]
 	path = tests/vendor/bats-assert
-	url = https://github.com/ztombol/bats-assert
+	url = https://github.com/bats-core/bats-assert
 [submodule "tests/vendor/bats-support"]
 	path = tests/vendor/bats-support
-	url = https://github.com/ztombol/bats-support
+	url = https://github.com/bats-core/bats-support
 [submodule "tests/vendor/bats-file"]
 	path = tests/vendor/bats-file
-	url = https://github.com/ztombol/bats-file
+	url = https://github.com/bats-core/bats-file
+[submodule "tests/vendor/bats-core"]
+	path = tests/vendor/bats-core
+	url = https://github.com/bats-core/bats-core
